# canarai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  new_test.yml
.github/workflows/: ci.yml  release.yml
demo/: index.html
docker/: canarai.toml  canary.toml  docker-compose.selfhosted.yml  docker-compose.yml
docs/: CONTRIBUTING.md  api-reference.md  architecture.md  quickstart.md  self-hosted-guide.md  test-authoring.md
scripts/: generate-api-key.py  seed-tests.py  simulate-agent.py
